# mp_implementation

./: README.md
src/jaka_motion_pipeline/: package.xml  setup.cfg  setup.py
src/jaka_motion_pipeline/config/: pipeline.yaml
src/jaka_motion_pipeline/jaka_motion_pipeline/: example_board_sequence.py  example_environment.py  example_task.py  example_viewpoint_task.py  export_board_states.py  motion_planner_node.py
src/jaka_motion_pipeline/launch/: automatic_demo.launch.py  board_states_demo.launch.py
src/jaka_planning_interfaces/: CMakeLists.txt  package.xml
src/jaka_planning_interfaces/action/: PlanMotion.action
src/jaka_planning_interfaces/msg/: EnvironmentModel.msg  EnvironmentObject.msg
