<?xml version="1.0"?>
<package format="3">
  <name>jaka_planning_interfaces</name>
  <version>0.1.0</version>
  <description>Interfaces between environment reconstruction, decision making, and JAKA motion planning.</description>
  <maintainer email="student@example.com">JAKA Planning Team</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
